--- a/Bankomat/Bankomat.csproj
+++ b/Bankomat/Bankomat.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bankomat.Abstractions\Bankomat.Abstractions.csproj" />
+    <ProjectReference Include="..\Cryptography.Abstractions\Cryptography.Abstractions.csproj" />
     <ProjectReference Include="..\DataStorage.Abstractions\DataStorage.Abstractions.csproj" />
   </ItemGroup>
 
